--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.4.0</app.runtime>
+		<app.runtime>4.4.0-20211227</app.runtime>
 		<mule.maven.plugin.version>3.5.1</mule.maven.plugin.version>
-		<munit.version>2.3.6</munit.version>
+		<munit.version>2.3.7</munit.version>
 	</properties>
 
 	<build>
